# graphicsGL

./: CMakeLists.txt  Camera.cpp  Camera.h  EBO.cpp  EBO.h  Texture.cpp  Texture.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  a.out  glad.c  main.cpp  shaderClass.cpp  shaderClass.h  vertindigen.py
Shaders/: default.frag  default.vert
